--- a/probalance.webflow.io/index.html
+++ b/probalance.webflow.io/index.html
@@ -1180,7 +1180,7 @@
                 <div role="list" class="team-collection-list w-dyn-items">
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                        class="team-card w-inline-block"><img
-                        src="../assets/ceo.jpg" height="250px"
+                        src="../assets/ceo.png" height="250px"
                         loading="lazy" alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
@@ -1202,7 +1202,7 @@
                     </a></div>
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                    class="team-card w-inline-block"><img
-                        src="../assets/chika4.jpg" height="250px"
+                        src="../assets/chika4.png" height="250px"
                         loading="lazy" alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
