--- a/probalance.webflow.io/team.html
+++ b/probalance.webflow.io/team.html
@@ -267,7 +267,7 @@
                 <div role="list" class="team-collection-list w-dyn-items">
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                       class="team-card w-inline-block"><img loading="lazy"
-                        src="../assets/ceo.jpg" height="250px"
+                        src="../assets/ceo.png" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
@@ -289,7 +289,7 @@
                     </a></div>
                   <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                       class="team-card w-inline-block"><img loading="lazy"
-                        src="../assets/chika4.jpg" height="250px"
+                        src="../assets/chika4.png" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
@@ -355,7 +355,7 @@
                     </a></div>
                     <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                       class="team-card w-inline-block"><img loading="lazy"
-                        src="../assets/Glory Alphonsus.JPG" height="250px"
+                        src="../assets/Glory Alphonsus.png" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
@@ -399,7 +399,7 @@
                     </a></div>
                     <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                       class="team-card w-inline-block"><img loading="lazy"
-                        src="../assets/Oludimu_Eunice_n.jpg" height="250px"
+                        src="../assets/Oludimu_Eunice_n.png" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
@@ -421,7 +421,7 @@
                     </a></div>
                     <div role="listitem" class="team-collection-list-item w-dyn-item"><a
                       class="team-card w-inline-block"><img loading="lazy"
-                        src="../assets/Dinobi.jpg" height="250px"
+                        src="../assets/Dinobi.png" height="250px"
                         alt="" class="team-image" />
                       <div class="team-card-content">
                         <div class="team-card-top-details">
