--- a/probalance.webflow.io/about.html
+++ b/probalance.webflow.io/about.html
@@ -661,7 +661,7 @@ We pride ourselves as, the chief digital team for your business that will enable
               </div>
               <div id="w-node-bde9efe0-efa4-6791-4c9c-683e7823abc9-7823abab" class="footer-link-list-wrapper">
                 <div class="footer-header-text">Pages</div>
-                <div class="footer-link-list"><a href="index.html" class="footer-link">Home</a><a href="about.html"
+                <div class="footer-link-list"><a href="../index.html" class="footer-link">Home</a><a href="about.html"
                     aria-current="page" class="footer-link w--current">About</a><a href="pricing.html"
                     class="footer-link">Pricing</a><a href="contact-page.html" class="footer-link">Contact</a><a href="team.html"
                     class="footer-link">Team</a></div>
