--- a/probalance.webflow.io/contact-page.html
+++ b/probalance.webflow.io/contact-page.html
@@ -31,7 +31,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
       role="banner" class="navber w-nav">
       <div class="nav-container">
-        <div class="navber-left-content-wrapper"><a href="index.html" class="nav-brand-logo-wrapper w-nav-brand"><img
+        <div class="navber-left-content-wrapper"><a href="../index.html" class="nav-brand-logo-wrapper w-nav-brand"><img
               src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/Teranium green.png" width="70px"
               loading="lazy" alt="" class="nav-brand-logo" /></a></div>
         <div class="navber-content-wrapper">
