--- a/probalance.webflow.io/pricing.html
+++ b/probalance.webflow.io/pricing.html
@@ -31,11 +31,11 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
       role="banner" class="navber w-nav">
       <div class="nav-container">
-        <div class="navber-left-content-wrapper"><a href="index.html" class="nav-brand-logo-wrapper w-nav-brand"><img
+        <div class="navber-left-content-wrapper"><a href="../index.html" class="nav-brand-logo-wrapper w-nav-brand"><img
               src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/Teranium green.png" width="70px"
               loading="lazy" alt="" class="nav-brand-logo" /></a></div>
         <div class="navber-content-wrapper">
-          <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Home</a><a
+          <nav role="navigation" class="nav-menu w-nav-menu"><a href="../index.html" class="nav-link w-nav-link">Home</a><a
               href="about.html" class="nav-link w-nav-link">About</a><a href="service.html"
               class="nav-link w-nav-link">Service</a><a href="pricing.html" aria-current="page"
               class="nav-link w-nav-link w--current">Price</a><a href="blog.html" class="nav-link w-nav-link">Blog</a><a
