--- a/probalance.webflow.io/service.html
+++ b/probalance.webflow.io/service.html
@@ -35,7 +35,7 @@
               src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/Teranium green.png" width="70px"
               loading="lazy" alt="" class="nav-brand-logo" /></a></div>
         <div class="navber-content-wrapper">
-          <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Home</a><a
+          <nav role="navigation" class="nav-menu w-nav-menu"><a href="../index.html" class="nav-link w-nav-link">Home</a><a
               href="about.html" class="nav-link w-nav-link">About</a><a href="service.html" aria-current="page"
               class="nav-link w-nav-link w--current">Service</a><a href="pricing.html"
               class="nav-link w-nav-link">Price</a><a href="blog.html" class="nav-link w-nav-link">Blog</a><a href="#"
